<resources>
    <string name="app_name">GPA System</string>
    <string name="save">Save</string>
    <string name="sem1">I Sem</string>
    <string name="sem2">II Sem</string>
    <string name="sem3">III Sem</string>
    <string name="sem4">IV Sem</string>
    <string name="semester_1">Semester 1</string>
    <string name="edit">edit</string>
    <string name="create">Create</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="semester_2">Semester 2</string>
    <string name="semester_3">Semester 3</string>
    <string name="semester_4">Semester 4</string>
    <string name="semester_5">Semester 5</string>
    <string name="semester_6">Semester 6</string>
    <string name="semester_8">Semester 8</string>
    <string name="empty">empty</string>
    <string name="semester_7">Semester 7</string>
    <string name="overall_g_p_a">Overall G.P.A</string>
    <string name="aggregate">Aggregate(%)</string>
    <string name="left">Left</string>
    <string name="right">right</string>
    <string name="subject_name">Subject</string>
    <string name="g">G</string>
    <string name="c">C</string>
    <string name="sgpa">Update S.G.P.A</string>
    <string name="diplaysgpa">S.G.P.A </string>
    <string name="Updatesub">Update Subject Name</string>
    <string name="Entersub">Enter Subject</string>
    <string name="entergrade">Update Grade</string>
    <string name="entercredits">Update Credits</string>
    <string name="add">Add</string>
    <string name="back">back</string>
    <string name="extract">extract</string>
    <string name="semester_g_p_a">Semester G.P.A</string>
    <string name="info">info</string>
    <string name="application_guide">Application Guide</string>
    <string name="supplies">Supplies</string>
    <string name="sem">Sem</string>
    <string name="no_supplies_yet">No Supplies yet!</string>

</resources>
