<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable name="semnum" type="java.lang.String"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context="com.android.gpasystem.SemesterGPA">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:layout_width="0dp"
                android:src="@drawable/previous"
                android:layout_margin="5dp"
                android:onClick="back"
                android:contentDescription="@string/back"
                android:layout_weight="0.1"
                android:tint="@color/colorPrimary"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_weight="0.9"
               android:gravity="center"
                android:textStyle="bold"
                android:text="@{semnum}"
                android:layout_height="match_parent" /></LinearLayout>

        </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="0dp"
                    android:text="@string/subject_name"
                    android:gravity="center"
                    android:textColor="@color/white5"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:textStyle="bold"
                    android:textColor="@color/white5"
                    android:gravity="center"
                    android:text="@string/g"
                    android:layout_height="match_parent" />
                <TextView
                    android:textColor="@color/white5"
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/c"
                    android:layout_height="match_parent" />
            </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:layout_height="40dp">
            <TextView
                android:background="@color/c2"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:text="@string/semester_g_p_a"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_height="match_parent" />
            <TextView
                android:background="@color/c3"
                android:id="@+id/sgpa"
                android:layout_marginTop="3dp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/fab"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/add"
            android:src="@drawable/add"
            android:layout_margin="10dp"
            android:layout_gravity="end|bottom"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>
